youfull/objects/Landing_Page_Component__c.object
<CustomObject>
    <fields>
        <fullName>Component_Header_Color__c</fullName>
        <label>Component Header Color</label>
        <picklist>
            <picklistValues>
                <fullName>Pink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Component_Title__c</fullName>
        <label>Component Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Row__c</fullName>
        <description>Row at which the component should be displayed, e.g. 1,2,3,...</description>
        <inlineHelpText>Row at which the component should be displayed, e.g. 1,2,3,...</inlineHelpText>
        <label>Display Row</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Report_Link_URL__c</fullName>
        <description>URL for the &apos;View Full Report&apos; link, if applicable</description>
        <inlineHelpText>URL for the &apos;View Full Report&apos; link, if applicable</inlineHelpText>
        <label>Full Report Link URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Height of the widget</description>
        <label>Height</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Horizontal_Position__c</fullName>
        <label>Horizontal Position</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Full_Report_Link_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to TRUE to indicate that the component should have the &apos;View Full Report&apos; link</description>
        <inlineHelpText>Set to TRUE to indicate that the component should have the &apos;View Full Report&apos; link</inlineHelpText>
        <label>Is Full Report Link Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_summary_overlay_display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_summary_overlay_display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landing_Page_Config__c</fullName>
        <label>Landing Page Config</label>
        <referenceTo>Landing_Page_Config__c</referenceTo>
        <relationshipLabel>Landing Page Components</relationshipLabel>
        <relationshipName>Landing_Page_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Number_of_rows_to_display__c</fullName>
        <defaultValue>10</defaultValue>
        <description># of rows to be displayed for components of type &apos;G1 Sales Leaders&apos;</description>
        <inlineHelpText># of rows to be displayed for components of type &apos;G1 Sales Leaders&apos;</inlineHelpText>
        <label>Number of rows to display</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VF_Page_Name__c</fullName>
        <description>Name of a VF page displayed inside the component</description>
        <inlineHelpText>Name of a VF page displayed inside the component</inlineHelpText>
        <label>VF Page Name</label>
        <picklist>
            <picklistValues>
                <fullName>TitleAchievement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1SalesLeaders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELRisingStars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1Candidates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1Appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title_Achievement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Landing Page Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Display_Row__c</columns>
        <columns>Horizontal_Position__c</columns>
        <columns>Component_Title__c</columns>
        <columns>Number_of_rows_to_display__c</columns>
        <columns>VF_Page_Name__c</columns>
        <columns>Component_Header_Color__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LPC-{0}</displayFormat>
        <label>LP Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Landing Page Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>